fixed scrollbar issue in payment methods

--- a/css/style.css
+++ b/css/style.css
@@ -2958,6 +2958,13 @@ main.control-panel--shown .page__layout > .control-panel {
 .payment-methods {
   position: absolute;
   inset: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   background-color: #fff;
   border-left: 1px solid #E4E6EB;
   border-right: 1px solid #E4E6EB;
@@ -2973,15 +2980,17 @@ main.control-panel--shown .page__layout > .control-panel {
   transition: opacity 200ms cubic-bezier(0.85, 0.47, 0.11, 0.88), transform 350ms cubic-bezier(0.85, 0.47, 0.11, 0.88), -webkit-transform 350ms cubic-bezier(0.85, 0.47, 0.11, 0.88);
 }
 .payment-methods__header {
+  position: sticky;
+  top: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 52px;
-  border-bottom: 1px solid #E4E6EB;
-  padding: 10px 15px;
+  height: 3.25rem;
+  border-bottom: 0.0625rem solid #E4E6EB;
+  padding: 0.625rem 0.9375rem;
 }
 .payment-methods__content {
   display: -webkit-box;
@@ -2991,13 +3000,32 @@ main.control-panel--shown .page__layout > .control-panel {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  max-width: 390px;
-  padding: 40px 0;
+  overflow-y: auto;
+  scrollbar-color: #BDBEC3 #F0F0F0;
+  scrollbar-width: thin;
+  scroll-behavior: smooth;
+  padding: 2.1875rem 1.25rem;
+}
+.payment-methods__content::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+.payment-methods__content::-webkit-scrollbar-track {
+  background-color: #F0F0F0;
+}
+.payment-methods__content::-webkit-scrollbar-thumb {
+  background-color: #BDBEC3;
+}
+.payment-methods__content::-webkit-scrollbar-corner {
+  background-color: transparent;
+}
+.payment-methods__content > * {
+  width: 24.375rem;
   margin: auto;
 }
 .payment-methods__content .form-label {
   color: inherit;
-  font-size: 12px;
+  font-size: 0.75rem;
 }
 .payment-methods__content .received-amount {
   display: -webkit-box;
@@ -3006,63 +3034,63 @@ main.control-panel--shown .page__layout > .control-panel {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 72px;
-  max-width: 390px;
-  border: 2px solid #1877F2;
-  border-radius: 8px;
-  padding: 15px 10px;
+  height: 4.5rem;
+  max-width: 24.375rem;
+  border: 0.125rem solid #1877F2;
+  border-radius: 0.5rem;
+  padding: 0.9375rem 0.625rem;
 }
 .payment-methods__content .received-amount input[type=number] {
   width: 100%;
   font-family: "NotoSansArabic_Medium", sans-serif;
-  font-size: 24px;
+  font-size: 1.5rem;
   border: none;
   background-color: transparent;
-  margin-left: 24px;
+  margin-left: 1.5rem;
 }
 .payment-methods__content .received-amount input[type=number]::-webkit-input-placeholder {
   color: #C6CFD9;
-  font-size: 24px;
+  font-size: 1.5rem;
 }
 .payment-methods__content .received-amount input[type=number]::-moz-placeholder {
   color: #C6CFD9;
-  font-size: 24px;
+  font-size: 1.5rem;
 }
 .payment-methods__content .received-amount input[type=number]:-ms-input-placeholder {
   color: #C6CFD9;
-  font-size: 24px;
+  font-size: 1.5rem;
 }
 .payment-methods__content .received-amount input[type=number]::-ms-input-placeholder {
   color: #C6CFD9;
-  font-size: 24px;
+  font-size: 1.5rem;
 }
 .payment-methods__content .received-amount input[type=number]::placeholder {
   color: #C6CFD9;
-  font-size: 24px;
+  font-size: 1.5rem;
 }
 .payment-methods__content .received-amount .currency {
   font-family: "NotoSansArabic_Medium", sans-serif;
   color: #1877F2;
   color: var(--color-brand);
-  margin-left: 30px;
+  margin-left: 1.875rem;
   margin-right: auto;
 }
 .payment-methods__content .received-amount .amount {
   font-family: "NotoSansArabic_Medium", sans-serif;
-  font-size: 14px;
+  font-size: 0.875rem;
   color: #465479;
   background-color: #F5F5F5;
-  border-radius: 7px;
+  border-radius: 0.4375rem;
   padding: 0.6rem 0.755rem;
   margin-right: auto;
 }
 .payment-methods__content .key__buttons {
-  gap: 18px;
-  padding: 0 15px;
-  margin-bottom: 15px;
+  gap: 1.125rem;
+  padding: 0 0.9375rem;
+  margin-bottom: 0.9375rem;
 }
 .payment-methods__content .key__buttons .key__btn {
-  font-size: 20px;
+  font-size: 1.25rem;
   padding: 1.075rem 1rem;
 }
 .payment-methods__content .receive__cash__btn {
