--- a/scss/components/_payment-methods.sass
+++ b/scss/components/_payment-methods.sass
@@ -1,6 +1,8 @@
 .payment-methods
     position: absolute
     inset: 0
+    display: flex
+    flex-direction: column
     background-color: $color-white
     border-left: 1px solid #E4E6EB
     border-right: 1px solid #E4E6EB
@@ -10,66 +12,73 @@
     transition: opacity 200ms cubic-bezier(0.85, 0.47, 0.11, 0.88), transform 350ms cubic-bezier(0.85, 0.47, 0.11, 0.88)
 
     &__header
+        position: sticky
+        top: 0
         display: flex
         align-items: center
-        height: 52px
-        border-bottom: 1px solid #E4E6EB
-        padding: 10px 15px
+        height: rem(52px)
+        border-bottom: rem(1px) solid #E4E6EB
+        padding: rem(10px) rem(15px)
 
     &__content
         display: flex
         flex-direction: column
-        max-width: 390px
-        padding: 40px 0
-        margin: auto
+        overflow-y: auto
+        +scroll-bar
+        scroll-behavior: smooth
+        padding: rem(35px) rem(20px)
+
+        & > *
+            width: rem(390px)
+            margin: auto
 
         .form-label
             color: inherit
-            font-size: 12px
+            font-size: rem(12px)
 
         .received-amount
             display: flex
             align-items: center
-            height: 72px
-            max-width: 390px
-            border: 2px solid $color-brand
-            border-radius: 8px
-            padding: 15px 10px
+            height: rem(72px)
+            max-width: rem(390px)
+            border: rem(2px) solid $color-brand
+            border-radius: rem(8px)
+            padding: rem(15px) rem(10px)
 
             input[type="number"]
                 width: 100%
                 font-family: 'NotoSansArabic_Medium', sans-serif
-                font-size: 24px
+                font-size: rem(24px)
                 border: none
                 background-color: transparent
-                margin-left: 24px
+                margin-left: rem(24px)
 
                 &::placeholder
                     color: #C6CFD9
-                    font-size: 24px
+                    font-size: rem(24px)
 
             .currency
                 font-family: 'NotoSansArabic_Medium', sans-serif
                 +var(color, color-brand)
-                margin-left: 30px
+                margin-left: rem(30px)
                 margin-right: auto
 
             .amount
                 font-family: 'NotoSansArabic_Medium', sans-serif
-                font-size: 14px
+                font-size: rem(14px)
                 color: #465479
                 background-color: #F5F5F5
-                border-radius: 7px
+                border-radius: rem(7px)
                 padding: 0.6rem 0.755rem
                 margin-right: auto
 
         .key__buttons
-            gap: 18px
-            padding: 0 15px
-            margin-bottom: 15px
+            gap: rem(18px)
+            padding: 0 rem(15px)
+            margin-bottom: rem(15px)
 
             .key__btn
-                font-size: 20px
+                font-size: rem(20px)
                 padding: 1.075rem 1rem
 
         .receive__cash__btn
